--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(https://images.unsplash.com/photo-1532357784983-450767d9355c?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=65f97db6c9419fcf160b7f2c5e44e152&auto=format&fit=crop&w=1953&q=80);
+	background-image: url(https://images.unsplash.com/photo-1532550501881-e2ce430496fa?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a62d047d046e1ea5fce6722eeda91a33&auto=format&fit=crop&w=1650&q=80);
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: 'Raleway', sans-serif;
@@ -7,15 +7,17 @@ body{
 }
 
 h1{
-	font-size: 40px;
+	font-size: 72px;
 }
 h2{ 
 	font-size: 28px;
 }
 p{
-	font-size: 18px;
-	color: #395C6B;
+	font-size: 32px;
+	color: #FFFFFF;
+	font-weight: bold;
 }
 a{
-	color: #395C6B;
+	color: #FFFFFF;
+	font-weight: bold;
 }
