--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(https://images.unsplash.com/photo-1532655538616-69c36514c595?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=938345d37ec62c1438cea5164029ea71&auto=format&fit=crop&w=1950&q=80);
+	background-image: url(https://images.unsplash.com/photo-1532699671635-01fdc8a95c48?ixlib=rb-0.3.5&s=633700d28b0dfa9254e6e7c6ae5c7709&auto=format&fit=crop&w=1650&q=80);
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: 'Raleway', sans-serif;
