--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(https://images.unsplash.com/photo-1532655538616-69c36514c595?ixlib=rb-0.3.5&s=8d522c01d03e307515f86692fc98be23&auto=format&fit=crop&w=1650&q=80);
+	background-image: url(https://images.unsplash.com/photo-1495366554757-8568e69d7f80?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b23e33878c459a275a9dc6481a4bf638&auto=format&fit=crop&w=1567&q=80);
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: 'Raleway', sans-serif;
