--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(https://images.unsplash.com/photo-1495366554757-8568e69d7f80?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=b23e33878c459a275a9dc6481a4bf638&auto=format&fit=crop&w=1567&q=80);
+	background-image: url(https://images.unsplash.com/photo-1486546910464-ec8e45c4a137?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=a2c308fe62dad65bdfd4b1efb8bc6bb8&auto=format&fit=crop&w=2918&q=80);
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: 'Raleway', sans-serif;
@@ -8,9 +8,11 @@ body{
 
 h1{
 	font-size: 72px;
+	color: #FFFFFF;
 }
 h2{ 
 	font-size: 28px;
+	color: #FFFFFF;
 }
 p{
 	font-size: 32px;
