--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(https://images.unsplash.com/photo-1533079047304-3997643590ab?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=027b043cbdacc36c92d5a5c4de3ae8cd&auto=format&fit=crop&w=1951&q=80);
+	background-image: url(https://images.unsplash.com/photo-1516796181074-bf453fbfa3e6?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=4520a8fb1519f78738dbd64357638081&auto=format&fit=crop&w=1650&q=80);
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: 'Raleway', sans-serif;
@@ -8,18 +8,18 @@ body{
 
 h1{
 	font-size: 72px;
-	color: #FFFFFF;
+	color: #000000;
 }
 h2{ 
 	font-size: 28px;
-	color: #FFFFFF;
+	color: #000000;
 }
 p{
 	font-size: 32px;
-	color: #FFFFFF;
+	color: #000000;
 	font-weight: bold;
 }
 a{
-	color: #FFFFFF;
+	color: #000000;
 	font-weight: bold;
 }
